# chorus-e2e-test

./: Cargo.toml  README.md
src/: e2e_data.rs  main.rs  observers.rs  tui.rs
