[package]
name = "e2e-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3"}
serde = { version = "^1.0.0", features = ["derive"]}
chorus = { git = "https://github.com/polyphony-chat/chorus.git", rev = "c70c54065b26c88c23a9e0fd17e5505c7f16c4dc" }
inquire = "0.6.2"
rand = "0.8.5"
rsa = "0.9.2"
tokio = { version="1.29.1", features = ["full"]}
z85 = "3.0.5"
async-trait = "0.1.72"
simplelog = "0.12.1"
